Fix traditional about by adding scroll overflow

--- a/static/home/css/home.css
+++ b/static/home/css/home.css
@@ -1846,6 +1846,7 @@ img::-moz-selection {
 
 /* Traditional About Me */
 #traditional-about {
+    overflow: scroll;
     color: black;
     position: absolute;
     top: 70px;
@@ -1855,44 +1856,6 @@ img::-moz-selection {
     width: 94.7%;
     height: 83%;
     border-radius: 5px;
-}
-@media all and (max-width: 1024px) {
-    #traditional-about {
-    font-size: .9em !important;
-}
-}
-
-@media all and (max-width: 1008px) {
-    #traditional-about {
-    font-size: .8em !important;
-}
-}
-
-@media all and (max-width: 683px) {
-    #traditional-about {
-    font-size: .7em !important;
-}
-}
-
-@media all and (max-width: 683px) {
-    #traditional-about {
-    font-size: .7em !important;
-}
-}
-
-@media all and (max-width: 400px), all and (max-height: 700px) {
-     #traditional-about {
-    font-size: .6em !important;
-}
-    #traditional-about h2 {
-        margin-top: 5px;
-    }
-}
-
-@media all and (max-width: 320px) {
-    #traditional-about {
-    font-size: .5em !important;
-}
 }
 
 
